--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,12 @@ dependencies:
   form_field_validator: ^1.1.0
   go_router: ^14.6.3
   google_fonts: ^6.2.1
-  http: ^1.2.2
   intl: ^0.19.0
   json_annotation: ^4.9.0
   panara_dialogs: ^0.1.5
   provider: ^6.1.2
   responsive_builder: ^0.7.1
+  shared_preferences: ^2.3.5
   smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
