--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  flutter_web_plugins:
+    sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,6 +49,7 @@ dependencies:
   form_field_validator: ^1.1.0
   go_router: ^14.6.3
   google_fonts: ^6.2.1
+#  http: ^1.2.2
   intl: ^0.19.0
   json_annotation: ^4.9.0
   panara_dialogs: ^0.1.5
