--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   flutter_localizations:
     sdk: flutter
-
   flutter_web_plugins:
     sdk: flutter
 
@@ -42,7 +40,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   awesome_extensions: ^2.0.20
+  brasil_fields: ^1.17.0
   build_runner: ^2.4.14
+  calendar_view: ^1.4.0
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   font_awesome_flutter: ^10.8.0
@@ -50,7 +50,7 @@ dependencies:
   go_router: ^14.6.3
   google_fonts: ^6.2.1
 #  http: ^1.2.2
-  intl: ^0.19.0
+  intl: ^0.20.1
   json_annotation: ^4.9.0
   panara_dialogs: ^0.1.5
   provider: ^6.1.2
@@ -58,12 +58,16 @@ dependencies:
   shared_preferences: ^2.3.5
   smooth_page_indicator: ^1.2.0+3
 
+dependency_overrides:
+  intl: ^0.19.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
   json_serializable: ^6.9.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
