--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,24 +35,22 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
 
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   awesome_extensions: ^2.0.20
   brasil_fields: ^1.17.0
-  build_runner: ^2.4.14
+  build_runner: ^2.4.6
   calendar_view: ^1.4.0
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   font_awesome_flutter: ^10.8.0
   form_field_validator: ^1.1.0
-  go_router: ^14.6.3
   google_fonts: ^6.2.1
-#  http: ^1.2.2
   intl: ^0.20.1
-  json_annotation: ^4.9.0
+  json_annotation: ^4.8.0
+  json_serializable: ^6.9.1
+  katana_router: ^2.4.4
+  katana_router_annotation: ^2.1.13
   panara_dialogs: ^0.1.5
+  pub_semver: ^2.0.0
   provider: ^6.1.2
   responsive_builder: ^0.7.1
   shared_preferences: ^2.3.5
@@ -60,13 +58,17 @@ dependencies:
 
 dependency_overrides:
   intl: ^0.19.0
+#  pub_semver: ^2.0.0
+  source_gen: ^1.5.0
+#  json_serializable: ^6.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
-  json_serializable: ^6.9.3
+  katana_router_builder: ^2.2.2
+
+
 
 
 # For information on the generic Dart part of this file, see the
