--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,19 +44,25 @@ dependencies:
   build_runner: ^2.4.14
   calendar_view: ^1.4.0
   cupertino_icons: ^1.0.8
+  data_table_2: ^2.5.18
+  dash_flags: ^0.1.1
   dio: ^5.7.0
+  flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
   form_field_validator: ^1.1.0
   go_router: ^14.6.3
   google_fonts: ^6.2.1
+  horizontal_calendar: ^1.1.2
 #  http: ^1.2.2
   intl: ^0.20.1
   json_annotation: ^4.9.0
+  mask_text_input_formatter: ^2.9.0
   panara_dialogs: ^0.1.5
   provider: ^6.1.2
   responsive_builder: ^0.7.1
   shared_preferences: ^2.3.5
   smooth_page_indicator: ^1.2.0+3
+  toggle_switch: ^2.3.0
 
 dependency_overrides:
   intl: ^0.19.0
@@ -80,6 +86,15 @@ flutter:
 
   assets:
     - assets/GetItOnGooglePlayPtBr.png
+    - assets/countries_states_and_cities/portugal.json
+    - assets/countries_states_and_cities/brazil.json
+    - assets/logo/amplify_black.svg
+    - assets/logo/amplify_white.svg
+    - assets/logo/amplify_dark_gray.svg
+    - assets/logo/amplify_light_gray.svg
+    - assets/logo/amplify_primary_green.svg
+    - assets/logo/amplify_secondary_green.svg
+    - assets/logo/amplify_gradient.svg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
