--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   panara_dialogs: ^0.1.5
   provider: ^6.1.2
   responsive_builder: ^0.7.1
-  syncfusion_flutter_calendar: ^28.2.7
+#  syncfusion_flutter_calendar: ^28.2.7
   syncfusion_flutter_datepicker: ^28.2.4
   shared_preferences: ^2.3.5
   smooth_page_indicator: ^1.2.0+3
