--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   data_table_2: ^2.5.18
   dash_flags: ^0.1.1
   datepicker_dropdown: ^0.1.7
-  dio: ^5.7.0
+  dio: ^5.4.0
   flutter_easy_dropdown: ^1.0.3
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
@@ -33,12 +33,13 @@ dependencies:
   google_fonts: ^6.2.1
   horizontal_calendar: ^1.1.2
 #  http: ^1.2.2
-  intl: ^0.20.1
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   mask_text_input_formatter: ^2.9.0
   number_pagination: ^1.1.6
   panara_dialogs: ^0.1.5
   provider: ^6.1.2
+  retrofit: ^4.4.2
   responsive_builder: ^0.7.1
 #  syncfusion_flutter_calendar: ^28.2.7
   searchable_listview: ^2.17.3
@@ -55,8 +56,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  dio: 5.4.0
   flutter_lints: ^5.0.0
   json_serializable: ^6.9.3
+  retrofit_generator: ^9.2.0
+
 
 
 # For information on the generic Dart part of this file, see the
