--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,30 @@
-events {}
+# events {}
+#
+# http {
+#   include       mime.types;
+#   default_type  application/octet-stream;
+#   sendfile        on;
+#   keepalive_timeout  65;
+#
+#   server {
+#     listen 80;
+#     server_name localhost;
+#
+#     root /usr/share/nginx/html;
+#     index index.html;
+#
+#     location / {
+#       try_files $uri $uri/ /index.html;
+#     }
+#
+#     error_page 404 /index.html;
+#   }
+# }
+worker_processes 1;
+
+events {
+  worker_connections 1024;
+}
 
 http {
   include       mime.types;
@@ -15,6 +41,12 @@ http {
 
     location / {
       try_files $uri $uri/ /index.html;
+    }
+
+    # Cache estático (opcional)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf|eot)$ {
+      expires 30d;
+      access_log off;
     }
 
     error_page 404 /index.html;
