--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
   form_field_validator: ^1.1.0
+  go_router: ^15.1.2
   katana_router: ^2.6.2
   katana_router_builder: ^2.2.10
   google_fonts: ^6.2.1
