Fix no Dockerfile #3 Criado .env

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
   generate: true
 
   assets:
+    - assets/.env
     - assets/.env.dev
     - assets/.env.local
     - assets/GetItOnGooglePlayPtBr.png
