--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   dio: ^5.4.0
   flutter_dotenv: ^5.2.1
   flutter_easy_dropdown: ^1.0.3
-  flutter_svg: ^2.0.17
+  flutter_svg: ^2.1.0
   font_awesome_flutter: ^10.8.0
   form_field_validator: ^1.1.0
   go_router: ^15.1.2
@@ -48,6 +48,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^28.2.4
   shared_preferences: ^2.3.5
   smooth_page_indicator: ^1.2.0+3
+  timelines_plus: ^1.0.7
   toastification: ^3.0.2
   toggle_switch: ^2.3.0
 
@@ -88,6 +89,7 @@ flutter:
     - assets/logo/amplify_primary_green.svg
     - assets/logo/amplify_secondary_green.svg
     - assets/logo/amplify_gradient.svg
+    - assets/dental_arch.svg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
