--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,12 @@ dependencies:
   dash_flags: ^0.1.1
   datepicker_dropdown: ^0.1.7
   dio: ^5.4.0
+  flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
-  flutter_easy_dropdown: ^1.0.3
   flutter_svg: ^2.1.0
   font_awesome_flutter: ^10.8.0
   form_field_validator: ^1.1.0
   go_router: ^15.1.2
-  katana_router: ^2.6.2
-  katana_router_builder: ^2.2.10
   google_fonts: ^6.2.1
   horizontal_calendar: ^1.1.2
 #  http: ^1.2.2
