--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
+  flutter_multi_formatter: ^2.13.7
   flutter_svg: ^2.1.0
   font_awesome_flutter: ^10.8.0
   form_field_validator: ^1.1.0
