--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ dependencies:
   data_table_2: ^2.5.18
   dash_flags: ^0.1.1
   datepicker_dropdown: ^0.1.7
+  drag_and_drop_lists: ^0.4.2
   dio: ^5.4.0
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
   flutter_multi_formatter: ^2.13.7
   flutter_svg: ^2.1.0
+  flutter_reorderable_list: ^1.3.1
   font_awesome_flutter: ^10.8.0
   form_field_validator: ^1.1.0
   go_router: ^15.1.2
@@ -37,6 +39,7 @@ dependencies:
 #  http: ^1.2.2
   intl: ^0.20.2
   json_annotation: ^4.9.0
+  kanban_board: ^1.0.0+2
   mask_text_input_formatter: ^2.9.0
   number_pagination: ^1.1.6
   panara_dialogs: ^0.1.5
